welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:24: error: not found: value ecriptMessage
    ecriptMessage(cpt)
    ^